--- a/auth_service/Cargo.toml
+++ b/auth_service/Cargo.toml
@@ -2,5 +2,8 @@
 name = "auth_service"
 version = "0.1.0"
 edition = "2024"
+description = "Example auth services"
+license = "MIT"
 
 [dependencies]
+rand = "0.9.2"
