--- a/projects/CLI_Jira_Clone/Cargo.toml
+++ b/projects/CLI_Jira_Clone/Cargo.toml
@@ -7,8 +7,10 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.99"
-serde = {version = "1.0.219", features = ["derive"] }
-serde_json = "1.0.143"
+serde = {version = "1.0.224", features = ["derive"] }
+serde_json = "1.0.145"
+ellipse = "0.2.0"
+itertools = "0.14.0"
 
 [dev-dependencies]
 tempfile = "3.22.0"
