--- a/projects/CLI_Jira_Clone/Cargo.toml
+++ b/projects/CLI_Jira_Clone/Cargo.toml
@@ -11,6 +11,7 @@ serde = {version = "1.0.224", features = ["derive"] }
 serde_json = "1.0.145"
 ellipse = "0.2.0"
 itertools = "0.14.0"
+clearscreen = "4.0.2"
 
 [dev-dependencies]
 tempfile = "3.22.0"
