--- a/projects/microservices/Cargo.toml
+++ b/projects/microservices/Cargo.toml
@@ -17,16 +17,16 @@ name = "health-check"
 path = "src/health-check-service/main.rs"
 
 [dependencies]
-tonic = "0.14.2" # used by all
-prost = "0.14.1" # used by all
-tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] } # used by all
-uuid = { version = "1.19.0", features = ["v4"] } # used by auth and health check services
-pbkdf2 = { version = "0.12.2", features = ["simple"] } # used by auth service
-rand_core = { version = "0.9.3", features = ["os_rng"] } # used by auth service
-clap = { version = "4.5.53", features = ["derive"] } # used by client
+tonic = "0.9" # used by all
+prost = "0.11" # used by all
+tokio = { version = "1.27", features = ["macros", "rt-multi-thread", "time"] } # used by all
+uuid = { version = "1.2", features = ["v4"] } # used by auth and health-check services
+pbkdf2 = { version = "0.12", features = ["simple"] } # used by auth service
+rand_core = { version = "0.6", features = ["std"] } # used by auth service
+clap = { version = "4.2", features = ["derive"] } # used by client
 
 [build-dependencies]
-tonic-prost-build = "0.14.2"# used by all
+tonic-build = "0.9.2" # used by all
 
 [profile.dev]
 build-override = { debug = true }
